rs/tests/failures/stable/pin_not_mut_self.stderr
error[E0412]: cannot find type `Pin` in this scope
  --> tests/failures/stable/pin_not_mut_self.rs:16:17
   |
16 |     let pinned: Pin<&mut MyStruct> = pin!(MyStruct {
   |                 ^^^ not found in this scope
   |
help: consider importing this struct
   |
1  + use std::pin::Pin;
   |
